--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,10 @@
         text-gray-500 transition-all hover:border-[#22a4ef]/40
         hover:text-[#22a4ef]/40
     }
+
+    .contactInput {
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-6
+        py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all
+        focus:border-[#22a4ef]/40 focus:text-[#22a4ef]/40 hover:border-[#22a4ef]/40
+    }
 }
